fixed overlapping headers (mobile)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -394,7 +394,7 @@ section .container {
   font-size: 14px;
   font-weight: 500;
   padding: 0;
-  line-height: 1px;
+  line-height: 17px;
   margin: 0 0 20px 0;
   letter-spacing: 2px;
   text-transform: uppercase;
